--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Kyle Keen <keenerd@gmail.com>
 
 pkgname=seamonkey
-pkgver=2.53.3
-pkgrel=2
+pkgver=2.53.5
+pkgrel=1
 pkgdesc="SeaMonkey internet suite"
 arch=('x86_64')
 license=('MPL')
@@ -10,15 +10,15 @@ depends=('dbus-glib' 'gtk3' 'hunspell' 'icu'
          'libevent' 'libpulse' 'libvpx' 'libxt' 'mime-types'
          'nss' 'sqlite' 'startup-notification')
 makedepends=('autoconf2.13' 'clang' 'gtk2' 'imake' 'llvm' 'mesa' 'python2-setuptools'
-             'python2-psutil' 'rust' 'yasm' 'unzip' 'zip')
+             'python2-psutil' 'rust' 'yasm' 'unzip' 'zip' 'nasm')
 optdepends=('networkmanager: Location detection via available WiFi networks'
 	    'libnotify: Notification integration'
 	    'pulseaudio: Audio support')
 url="https://www.seamonkey-project.org/"
 source=("https://archive.mozilla.org/pub/seamonkey/releases/$pkgver/source/seamonkey-$pkgver.source.tar.xz"
         "mozconfig")
-sha256sums=('2cc86fc22b8113eecd75ae68d4857664e2aadcca72eff4e602301ba0bd5fe48b'
-            '4f371c19959a0745b33a1ef76182c26ece9bcaa6d5b04050539c6c96f4e3a6f3')
+sha256sums=('ab1cef1db8e6cb725ef4be65d3cad3a5fb5019d0cdc3baa13d1c24ef53e28395'
+            '5341594529a763598f979b4c84f5a7892f97a0727f4283798c94a1e8869f70fe')
 install="$pkgname.install"
 
 # Google API keys (see http://www.chromium.org/developers/how-tos/api-keys)
