--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -9,12 +9,8 @@ url='https://argoproj.github.io/argo-cd/'
 license=('Apache')
 makedepends=('go')
 depends=('glibc')
-source=("argo-cd-${pkgver}.tar.gz::https://github.com/argoproj/argo-cd/archive/v${pkgver}.tar.gz"
-        "argocd.bash"
-        "argocd.zsh")
-sha512sums=('2d3fe2f90188192769d4f6bdf28e36b6c7dfa98b21e2cd88c56e1a97e3ed4bcacc23b9e09a48a17872113571833fcaefa4a4f71726cf9bff71c9aa816045a05f'
-            '5e751e78965b00f767aff90df435aba57aefa6f6d599807ddfda243ff95e0366636da2b2b5af2e9b389ab9efec23ee049f27e6a7defb8d3cb308693495b8a762'
-            '28568c83720793cdb5e77ec9c4aa5f1f4757ed665e84d807b8a4fe8377497f462fd33faf4bf076cf0a910e6b4d756ab31d66b1cf5643a3744bd0fa2b62287754')
+source=("argo-cd-${pkgver}.tar.gz::https://github.com/argoproj/argo-cd/archive/v${pkgver}.tar.gz")
+sha512sums=('2d3fe2f90188192769d4f6bdf28e36b6c7dfa98b21e2cd88c56e1a97e3ed4bcacc23b9e09a48a17872113571833fcaefa4a4f71726cf9bff71c9aa816045a05f')
 
 build() {
   cd "argo-cd-$pkgver"
@@ -34,13 +30,15 @@ build() {
               -linkmode=external \
               -extldflags \"${LDFLAGS}\"" \
     ./cmd/argocd
+
+  ./argocd completion bash > argocd.bash
+  ./argocd completion zsh > argocd.zsh
 }
 
 package() {
-  install -Dm644 argocd.bash "$pkgdir/usr/share/bash-completion/completions/argocd"
-  install -Dm644 argocd.zsh "$pkgdir/usr/share/zsh/site-functions/_argocd"
-
   cd "argo-cd-$pkgver"
 
   install -D argocd "$pkgdir/usr/bin/argocd"
+  install -Dm644 argocd.bash "$pkgdir/usr/share/bash-completion/completions/argocd"
+  install -Dm644 argocd.zsh "$pkgdir/usr/share/zsh/site-functions/_argocd"
 }
